fix minor css margin issue
with visible/not visible compatibility

--- a/src/jupyter_nbextensions_configurator/static/nbextensions_configurator/main.css
+++ b/src/jupyter_nbextensions_configurator/static/nbextensions_configurator/main.css
@@ -109,10 +109,13 @@
 
 .nbext-icon,
 .nbext-desc,
-.nbext-compat-div,
 .nbext-enable-btns,
 .nbext-params {
     margin-bottom: 8px;
+}
+
+.nbext-enable-btns {
+    margin-top: 8px;
 }
 
 /* styles for list inputs */
